<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_core</name>
  <version>1.0.0</version>
  <description>Core system for starting up an F1Tenth vehicle.</description>
  <maintainer email="reyespinr@vcu.edu">reyespinr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>throttle_interpolator</exec_depend>
  <exec_depend>vesc</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
